# cumd

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cumd/: __init__.py  __main__.py  convert.py  cumd.py  cuxml.py
cumd/test/: test_cumd.py  test_cuxml.py
